--- a/.github/workflows/auto_labeler.yml
+++ b/.github/workflows/auto_labeler.yml
@@ -12,7 +12,7 @@ jobs:
         uses: actions/checkout@v2
 
       - name: Apply Labels
-        uses: "pascalgn/automerge-action@lastest"
+        uses: "pascalgn/automerge-action@v0.16.2"
         with:
           repo-token: "${{ secrets.GITHUB_TOKEN }}"
           labels: |
