--- a/.github/workflows/auto_labeler.yml
+++ b/.github/workflows/auto_labeler.yml
@@ -1,20 +1,18 @@
-name: Auto Labeler
-
+name: Label issues
 on:
   issues:
-    types: [opened]
-
+    types:
+      - reopened
+      - opened
 jobs:
-  auto_label:
+  label_issues:
     runs-on: ubuntu-latest
+    permissions:
+      issues: write
     steps:
-      - name: Checkout Repository
-        uses: actions/checkout@v2
-
-      - name: Apply Labels
-        uses: "pascalgn/automerge-action@v0.16.2"
-        with:
-          repo-token: "${{ secrets.GITHUB_TOKEN }}"
-          labels: |
-            { "bug": ["bug", "error", "issue"], "enhancement": ["feature", "improvement"], "documentation": ["doc", "readme"], "question": ["help", "question"] }
-
+      - run: gh issue edit "$NUMBER" --add-label "$LABELS"
+        env:
+          GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          GH_REPO: ${{ github.repository }}
+          NUMBER: ${{ github.event.issue.number }}
+          LABELS: triage
