--- a/.github/workflows/auto_labeler.yml
+++ b/.github/workflows/auto_labeler.yml
@@ -10,8 +10,31 @@ jobs:
     permissions:
       issues: write
     steps:
-      - run: gh issue edit "$NUMBER" --add-label "$LABELS"
-        env:
+      - name: Get Existing Labels
+        id: get_labels
+        run: |
+          LABELS=$(curl -s -H "Authorization: token ${{ secrets.GITHUB_TOKEN }}" \
+                    -H "Accept: application/vnd.github.v3+json" \
+                    https://api.github.com/repos/${{ github.repository }}/labels \
+                    | jq -r '.[].name')
+          echo "::set-output name=labels::$LABELS"
+      - name: Check for Keywords and Set Labels
+        run: |
+          EXISTING_LABELS="${{ steps.get_labels.outputs.labels }}"
+          LABELS=""
+          for label in $EXISTING_LABELS; do
+              if grep -q "$label" <<< "${{ github.event.issue.title }}"; then
+                  # Append label to LABELS variable
+                  LABELS="$LABELS,$label"
+              fi
+          done
+          # Remove leading comma if LABELS is not empty
+          if [ -n "$LABELS" ]; then
+              LABELS="${LABELS#,}"
+              # Set labels to the issue
+              gh issue edit ${{ github.event.issue.number }} --add-label "$LABELS"
+          fi
+      - env:
           GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           GH_REPO: ${{ github.repository }}
           NUMBER: ${{ github.event.issue.number }}
