--- a/.github/workflows/auto_labeler.yml
+++ b/.github/workflows/auto_labeler.yml
@@ -17,7 +17,8 @@ jobs:
                     -H "Accept: application/vnd.github.v3+json" \
                     https://api.github.com/repos/${{ github.repository }}/labels \
                     | jq -r '.[].name')
-          echo "labels=$LABELS" >> $GITHUB_OUTPUT
+          echo "$LABELS"
+          echo "name=$LABELS" >> $GITHUB_OUTPUT
       - name: Check for Keywords and Set Labels
         run: |
           EXISTING_LABELS="${{ steps.get_labels.outputs.labels }}"
