--- a/.github/workflows/auto_labeler.yml
+++ b/.github/workflows/auto_labeler.yml
@@ -17,11 +17,10 @@ jobs:
                     -H "Accept: application/vnd.github.v3+json" \
                     https://api.github.com/repos/${{ github.repository }}/labels \
                     | jq -r '.[].name' | paste -sd "," -)
-          echo "labels=$LABELS" >> $GITHUB_STATE
       - name: Check for Keywords and Set Labels
         run: |
           IFS=','
-          read -ra EXISTING_LABELS <<< "${{steps.get_labels.state.labels}}"
+          read -ra EXISTING_LABELS <<< "$LABELS"
           ISSUE_NUMBER=${{ github.event.issue.number }}
           TITLE=${{ github.event.issue.title }}
           for label in ${EXISTING_LABELS[@]}; do
