--- a/.github/workflows/auto_labeler.yml
+++ b/.github/workflows/auto_labeler.yml
@@ -17,12 +17,14 @@ jobs:
                     -H "Accept: application/vnd.github.v3+json" \
                     https://api.github.com/repos/${{ github.repository }}/labels \
                     | jq -r '.[].name' | paste -sd "," -)
+          echo "labels=$LABELS" >> $GITHUB_OUTPUT
       - name: Check for Keywords and Set Labels
         run: |
           IFS=','
-          read -ra EXISTING_LABELS <<< "$LABELS"
+          EXISTING_LABELS = "" 
+          read -ra EXISTING_LABELS <<< "${{steps.get_labels.outputs.labels}}"
           ISSUE_NUMBER=${{ github.event.issue.number }}
-          TITLE=${{ github.event.issue.title }}
+          TITLE="${{ github.event.issue.title }}"
           for label in ${EXISTING_LABELS[@]}; do
               echo "$label"
               if grep -q "$label" <<< "$TITLE"; then
