--- a/.github/workflows/RFC_notifier.yml
+++ b/.github/workflows/RFC_notifier.yml
@@ -25,12 +25,16 @@ jobs:
     - name: Add comment to RFC discussion
       if: steps.check-rfc-reference.outputs.rfc_ref != 'none'
       run: |
-        rfc_ref=${{ steps.check-rfc-reference.outputs.rfc_ref }}
+        post_id=${{ steps.check-rfc-reference.outputs.rfc_ref }}
         issue_number=${{ github.event.issue.number }}
-        comment="This RFC has been moved forward to \#$issue_number"
+        comment_body="This RFC has been moved forward to \#$issue_number"
+        COMMENT_API_URL="https://api.github.com/repos/${{ github.repository }}/comments/${post_id}/reactions"
+        AUTH_HEADER="Authorization: Bearer ${{ secrets.GITHUB_TOKEN }}"
+          
         curl -X POST \
-          -H "Authorization: Bearer ${{ secrets.GITHUB_TOKEN }}" \
-          -H "Accept: application/vnd.github.v3+json" \
-          -d "{\"body\": \"$comment\"}" \
-          "https://api.github.com/repos/${{ github.repository }}/issues/$(echo $rfc_ref | cut -d '#' -f 2)/comments"
+        -H "Content-Type: application/json" \
+        -H "$AUTH_HEADER" \
+        -d "{\"body\": \"$comment_body\"}" \
+        "$COMMENT_API_URL"
+        
 
