--- a/.github/workflows/RFC_notifier.yml
+++ b/.github/workflows/RFC_notifier.yml
@@ -28,7 +28,7 @@ jobs:
         post_id=${{ steps.check-rfc-reference.outputs.rfc_ref }}
         issue_number=${{ github.event.issue.number }}
         comment_body="This RFC has been moved forward to #${issue_number}"
-        COMMENT_API_URL="https://api.github.com/repos/${{ github.repository }}/comments/${post_id}/reactions"
+        COMMENT_API_URL="https://api.github.com/repos/${{ github.repository }}/issues/${post_id}/comments"
         AUTH_HEADER="Authorization: Bearer ${{ secrets.commentor }}"
           
         curl -X POST \
